--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongodb": "^6.20.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.11",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
