--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
+    "redis": "^5.10.0",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
