--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.20.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nanoid": "^5.1.6",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
     "redis": "^5.10.0",
